# sc-demo

./: .gitignore  README.md  calculator.js  package-lock.json  package.json
adder/: README.md  adder.ts  package-lock.json  package.json  rollup.config.mjs
adder/wit/: world.wit
calculator/: Cargo.toml  README.md
calculator/src/: bindings.rs  lib.rs
calculator/wit/: deps.toml  world.wit
command/: Cargo.toml  README.md
command/src/: bindings.rs  main.rs
command/wit/: world.wit
multiplier/: README.md  app.py
multiplier/wit/: world.wit
