[package]
name = "calculator"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "math:calculator"

[package.metadata.component.target]
path = "wit"
world = "calculator"

[package.metadata.component.target.dependencies]
"ops:adder" = { path = "../adder/wit" }
"ops:multiplier" = { path = "../multiplier/wit" }
